package netty;
option java_package = "com.liaozl.netty.demo.serialization.protobuf";
option java_outer_classname = "SubscribeRequestProto";

message SubscribeRequest {
    required int32 subReqID = 1;
    required string userName = 2;
    required string productName = 3;
    required string phoneNumber = 4;
    required string address = 5;
}