package netty;
option java_package = "com.liaozl.netty.demo.serialization.protobuf";
option java_outer_classname = "SubscribeResponseProto";

message SubscribeResponse {
    required int32 subReqID = 1;
    required int32 respCode = 2;
    required string desc = 3;
}